﻿1.2
===

New Features:

  * Add support for limited wiki text in edit summaries (wiki links, interwiki
    links) to match Mediawiki behavior.
  * Add a new JAMWiki:Header system topic that allows adding a custom message
    to the top of all pages, just below the tab bar.
  * Add a new JAMWiki:Custom.css stylesheet.  Starting with JAMWiki 1.2
    System.css will be used for base CSS styles, while Custom.css should be
    used for site-specific customizations.
  * Move the system topics (BottomArea, LeftMenu, StyleSheet) to the
    JAMWiki: namespace (JAMWiki:Footer, JAMWiki:Sidebar, JAMWiki:System.css).
  * Support storing images directly in the database rather than on the
    filesystem (avhohlov2).
  * Refactor caching.  The cache is now configured to use a percentage of heap
    rather than a fixed size to avoid possible OOM situations, configuration is
    now managed via the ehcache-jamwiki.xml file, and individual caches have
    been fine-tuned to optimize performance.
  * Allow the table of contents to be hidden via a "show/hide" link.
  * Add support for the Mediawiki {{padleft:}} and {{padright:}} parser
    functions.  Usage: "{{padleft:string|amt|padString}}".
  * Enhance the #expr parser function to better match Mediawiki by supporting
    the order of operations and functions such as "round" and "trunc".
  * {{REVISIONMONTH}} is no longer padded ("4" instead of "04") while
    {{REVISIONMONTH1}} has been added in order to match Mediawiki behavior.
  * Allow page name and namespace magic words to specify the page to be
    operated on, instead of just the current page, to match Mediawiki behavior.
    Example: "{{PAGENAME:Template:Main Page}}".
  * Add a new ROLE_REGISTER to allow enabling/disabling self-registration for
    anonymous users.  By default anonymous users are allowed to self-register.
  * Display the last IP address used by a user on the Special:Block page when
    blocking user accounts.